--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/server.ts",
-    "start": "node ./src/server.js",
+    "start": "node ./dist/server.js",
     "build": "tsc"
   },
   "keywords": [],
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.5",
+    "@types/pg": "^8.10.9",
     "express": "^4.18.2",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
